re PR c++/8067 (g++ 3.2 internal error: Segmentation fault)

PR c++/8067
	* decl.c (maybe_inject_for_scope_var): Ignore __FUNCTION__ and
	related variables.

	PR c++/8067
	* g++.dg/lookup/pretty1.C: New test.

From-SVN: r58479